# esp32_file_system

./: CMakeLists.txt  _fs_file_close.c  _fs_file_mount_and_write.c  _fs_file_mount_and_write_all.c  _fs_file_open.c  _fs_file_open_and_write.c  _fs_file_open_and_write_all.c  _fs_file_write_line.c  _fs_file_write_text.c  fs_file_append_all_lines.c  fs_file_append_all_texts.c  fs_file_append_line.c  fs_file_append_text.c  fs_file_close.c  fs_file_mount_and_write.c  fs_file_open.c  fs_file_open_and_write.c  fs_file_open_and_write_all.c  fs_file_write_all_lines.c  fs_file_write_all_texts.c  fs_file_write_line.c  fs_file_write_text.c
include/: fs.h
test/: CMakeLists.txt  Makefile  sdkconfig
test/main/: CMakeLists.txt  main_test.c  main_test.h  test_conf.c  test_file_mount_and_write.c  test_file_mount_and_write_all.c  test_file_open_and_write.c  test_file_open_and_write_all.c  test_file_write_line.c  test_file_write_text.c  test_fs_file_append_all_lines.c  test_fs_file_append_all_texts.c  test_fs_file_append_line.c  test_fs_file_append_text.c  test_fs_file_write_all_lines.c  test_fs_file_write_all_texts.c  test_fs_file_write_line.c  test_fs_file_write_text.c  test_open_file.c
