idf_component_register(SRCS
                        "_fs_file_open.c"
                        "_fs_file_close.c"
                        "_fs_file_write_text.c"
                        "_fs_file_write_line.c"
                        "_fs_file_open_and_write.c"
                        "_fs_file_mount_and_write.c"
                        "_fs_file_open_and_write_all.c"
                        "_fs_file_mount_and_write_all.c"
                        "fs_file_write_text.c"
                        "fs_file_write_line.c"
                        "fs_file_write_all_texts.c"
                        "fs_file_write_all_lines.c"
                        "fs_file_append_text.c"
                        "fs_file_append_line.c"
                        "fs_file_append_all_texts.c"
                        "fs_file_append_all_lines.c"
                    INCLUDE_DIRS "include"
                    REQUIRES spiffs)
