idf_component_register(SRCS 
                        "main_test.c"
                        "test_conf.c"
                        "test_open_file.c"
                        "test_file_write_text.c"
                        "test_file_write_line.c"
                        "test_file_open_and_write.c"
                        "test_file_mount_and_write.c"
                        "test_file_open_and_write_all.c"
                        "test_file_mount_and_write_all.c"
                        "test_fs_file_append_all_lines.c"
                        "test_fs_file_append_all_texts.c"
                        "test_fs_file_append_line.c"
                        "test_fs_file_append_text.c"
                        "test_fs_file_write_all_lines.c"
                        "test_fs_file_write_all_texts.c"
                        "test_fs_file_write_line.c"
                        "test_fs_file_write_text.c"
                    INCLUDE_DIRS "."
                    REQUIRES unity spiffs file_system)
